--- a/alphaUkeBox/package.json
+++ b/alphaUkeBox/package.json
@@ -3,21 +3,13 @@
   "version": "1.1.1",
   "description": "alphaUkeBox: An Ionic project",
   "dependencies": {
-    "bcrypt": "^0.8.5",
-    "body-parser": "^1.15.0",
-    "express": "^4.13.4",
     "gitignore": "^0.4.0",
     "gulp": "^3.5.6",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
-    "ios-sim": "^5.0.6",
-    "jwt-simple": "^0.4.1",
-    "mongoose": "^4.4.3",
-    "morgan": "^1.6.1",
-    "passport": "^0.3.2",
-    "passport-jwt": "^2.0.0"
+    "ios-sim": "^5.0.6"
   },
   "devDependencies": {
     "bower": "^1.3.3",
