--- a/alphaUkeBox/api/package.json
+++ b/alphaUkeBox/api/package.json
@@ -1,22 +1,14 @@
 {
-  "name": "api",
-  "version": "1.0.0",
-  "description": "",
+  "name": "node-rest-auth",
   "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "bcrypt": "^0.8.5",
-    "body-parser": "^1.15.0",
-    "express": "^4.13.4",
-    "jwt-simple": "^0.4.1",
-    "mongoose": "^4.4.3",
-    "morgan": "^1.6.1",
-    "passport": "^0.3.2",
-    "passport-jwt": "^2.0.0"
+    "body-parser": "~1.9.2",
+    "express": "~4.9.8",
+    "jwt-simple": "^0.3.1",
+    "mongoose": "~4.2.4",
+    "morgan": "~1.5.0",
+    "passport": "^0.3.0",
+    "passport-jwt": "^1.2.1"
   }
 }
