login should be working now... time to test?

--- a/alphaUkeBox/ionic.project
+++ b/alphaUkeBox/ionic.project
@@ -1,4 +1,11 @@
 {
   "name": "alphaUkeBox",
-  "app_id": "09fd4665"
+  "app_id": "09fd4665",
+  "proxies": [
+    {
+      "path": "/api",
+      "proxyUrl": "http://127.0.0.1:8080/api"
+
+    }
+  ]
 }
